<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_book"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/address_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_card"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/angry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angry"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/arrow_alt_circle_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_alt_circle_down"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/arrow_alt_circle_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_alt_circle_left"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/arrow_alt_circle_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_alt_circle_right"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/arrow_alt_circle_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_alt_circle_up"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bell"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bell_slash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bell_slash"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bookmark"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/building"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/calendar_alt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_alt"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />

        <TextView
            android:id="@+id/calendar_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_check"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/calendar_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_minus"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/calendar_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_plus"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_margin="8dp" />
    </LinearLayout>
</LinearLayout>